# fewwis-bot

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
crates/piston/: Cargo.toml
crates/piston/src/: client.rs  consts.rs  errors.rs  lang.rs  lib.rs
crates/raelib/: Cargo.toml
crates/raelib/src/: consts.rs  lib.rs  prelude.rs  utils.rs
crates/raelib/src/http/: client.rs  definitions.rs  errors.rs  mod.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230920_015120_create_users.rs  m20230920_015138_create_stats.rs  m20230920_015144_create_rel_users_stats.rs  m20230920_015156_create_flags_stats.rs  m20230920_015202_create_rel_flags_stats.rs  m20230924_061320_buttons.rs  m20230924_061332_create_rel_buttons.rs  m20231004_203431_create_tasks.rs  m20231004_203500_create_subtasks.rs
src/: api.rs  consts.rs  helper.rs  main.rs  types.rs
src/commands/: mod.rs
src/commands/fun/: memes.rs  mod.rs  quiz.rs  quiz_buttons.rs
src/commands/fun/quiz/: buttons.rs  flags.rs
src/commands/todos/: create.rs  delete.rs  mod.rs  status.rs  update.rs
src/commands/todos/steps/: add.rs  delete.rs  mod.rs  update.rs
src/commands/utilities/: age.rs  avatar.rs  mod.rs  ping.rs  sum.rs  translate.rs
src/entities/: buttons.rs  flags.rs  mod.rs  prelude.rs  rel_buttons_stats.rs  rel_flags_stats.rs  rel_users_stats.rs  stats.rs  step.rs  task.rs  users.rs
