[package]
name = "fewwis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
rand = "0.8.5"
reqwest = { version = "0.11.20", features = ["json"] }
sea-orm = { version = "0.12.2", features = [
    "sqlx-mysql",
    "macros",
    "runtime-tokio-native-tls",
] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = "0.3.17"
raelib = { path = "./crates/raelib" }

[dependencies.poise]
git = "https://github.com/serenity-rs/poise"
branch = "serenity-next"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"

[workspace]
members = [".", "migration", "crates/raelib"]

[profile.dev]
opt-level = 1
