[package]
name = "raelib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = "0.3.17"
tl = { version = "0.7.7", features = ["simd"] }
